<resources>
    <!-- base application and common component strings -->
    <string name="app_name">financify</string>
    <string name="app_header">financify</string>
    <string name="back_home">Back to Home</string>
    <string name="back_accounts">Back to Accounts</string>
    <string name="back_transactions">Back to Transactions</string>
    <string name="back_reminders">Back to Reminders</string>
    <string name="sample_name">Zinnia Launio</string>

    <!-- login and register page strings -->
    <string name="login_label">Log in to your account</string>
    <string name="register_label">Create a new account</string>
    <string name="login_btn_label">Log In</string>
    <string name="register_btn_label">Create Account</string>
    <string name="login_redirect_label"><u>Sign in instead</u></string>
    <string name="register_redirect_label"><u>Create a new account</u></string>
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="email_label">E-mail Address</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="new_password_label">New Password</string>
    <string name="old_password_label">Current Password</string>
    <string name="change_password_label"><u>Change Password</u></string>
    <string name="confirm_new_password_label">Confirm New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="login_failed">Invalid Email or Password!</string>
    <string name="login_success">Logged In Successfully!</string>
    <string name="register_success">User Registered Successfully!</string>
    <string name="register_failed">User Registration Failed!</string>
    <string name="pin_create_label">Please create a 6-digit PIN</string>
    <string name="use_bio_label"><u>Use biometrics instead</u></string>

    <!-- drawer and menu strings -->
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_settings_card">Settings</string>
    <string name="menu_cash_flow">Cash Flow</string>
    <string name="menu_reminder_list">Reminders</string>
    <string name="menu_budget_sheet">Budget Sheet</string>
    <string name="menu_settings">Account Settings</string>
    <string name="menu_logout">Log Out</string>

    <!-- home page strings -->
    <string name="action_indicator">What do you want to do today?</string>
    <string name="user_greeting">Hello, Zinnia!</string>

    <!-- account settings strings -->
    <string name="settings_label">Account Settings</string>
    <string name="settings_save">Save Changes</string>

    <!-- summary page strings -->
    <string name="summary_empty">
        You have not yet made any accounts, create accounts at the Cash Flow page.
    </string>
    <string name="summary_date_empty">
        No transactions were made at the given date.
    </string>

    <!-- types of summary -->
    <string-array name="summary_types">
        <item>Top Accounts By Balance</item>
        <item>Transaction Types Ratio</item>
    </string-array>

    <!-- types of account -->
    <string-array name="account_types">
        <item>Physical Wallet</item>
        <item>Bank Account</item>
        <item>Digital Wallet</item>
    </string-array>

    <!-- types of reminders -->
    <string-array name="reminder_types">
        <item>Select type…</item>
        <item>Urgent</item>
        <item>Nonurgent</item>
    </string-array>

    <string-array name="transaction_types">
        <item>Select type…</item>
        <item>Income</item>
        <item>Expense</item>
        <item>Investment</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>
