<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- home activity drawer menu item -->
    <group
        android:id="@+id/menu_home_item">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>

    <!-- activity drawer menu items -->
    <group
        android:id="@+id/menu_action_items">
        <!-- portfolio menu item -->
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/menu_summary" />

        <!-- cash flow menu item -->
        <item
            android:id="@+id/nav_cash_flow"
            android:icon="@drawable/ic_cash"
            android:title="@string/menu_cash_flow" />

        <!-- reminder list menu item -->
        <item
            android:id="@+id/nav_reminder_list"
            android:icon="@drawable/ic_reminder"
            android:title="@string/menu_reminder_list" />

        <!-- budget sheet menu item -->
        <item
            android:id="@+id/nav_budget_sheet"
            android:icon="@drawable/ic_budget"
            android:title="@string/menu_budget_sheet" />
    </group>

    <group android:id="@+id/menu_account_items">
        <!-- account settings menu item -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <!-- logout menu item -->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>