<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/financify_light_blue"
    tools:context=".LoginActivity">

    <!-- guidelines for login form box -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <!-- login form box -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_form"
        app:layout_constraintTop_toBottomOf="@id/gl_top_login"
        app:layout_constraintBottom_toTopOf="@id/gl_bottom_login"
        app:layout_constraintStart_toEndOf="@id/gl_left_login"
        app:layout_constraintEnd_toStartOf="@id/gl_right_login">

        <!-- application title -->
        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_header"
            android:textSize="35sp"
            android:textColor="@color/financify_light_blue"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- login label -->
        <TextView
            android:id="@+id/tv_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_label"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <!-- login username input box -->
        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/bg_input"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="@color/financify_dark_blue"
            app:layout_constraintTop_toBottomOf="@id/tv_login_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- login password input box -->
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/bg_input"
            android:hint="@string/password_label"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="@color/financify_dark_blue"
            android:inputType="textPassword|textWebPassword"
            app:layout_constraintTop_toBottomOf="@id/et_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- login button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_ripple"
            app:backgroundTint="@color/financify_light_blue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login_btn_label"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_password"
            android:focusable="true" />

        <!-- progress bar when login button is pressed -->
        <ProgressBar
            android:id="@+id/pb_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login" />

        <!-- register redirect button -->
        <Button
            android:id="@+id/btn_register_redirect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:text="@string/register_redirect_label"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/financify_light_blue"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>