<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_mid_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- back to home button and text layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_back_home_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- back to home button image -->
        <ImageView
            android:id="@+id/iv_settings_back_home"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:paddingBottom="2dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/tv_settings_back_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_settings_back_home"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/financify_light_blue" />

        <!-- back to home button label -->
        <TextView
            android:id="@+id/tv_settings_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Back to Home"
            android:textColor="@color/financify_light_blue"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/iv_settings_back_home"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- account settings label -->
    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/settings_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_27sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_settings_back_home_nav" />

    <!-- first name input field -->
    <EditText
        android:id="@+id/et_settings_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="9dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="Zinnia"
        android:textColor="@color/financify_lightest_blue"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@color/financify_dark_blue"
        app:layout_constraintEnd_toStartOf="@id/gl_mid_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />

    <!-- first name input field label -->
    <TextView
        android:id="@+id/tv_settings_first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:text="@string/firstname_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/et_settings_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_mid_settings" />

    <!-- last name input field -->
    <EditText
        android:id="@+id/et_settings_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="Launio"
        android:textColor="@color/financify_lightest_blue"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@color/financify_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_mid_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />

    <!-- last name input field label -->
    <TextView
        android:id="@+id/tv_settings_last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:text="@string/lastname_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/et_settings_last_name"
        app:layout_constraintStart_toEndOf="@id/gl_mid_settings"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- email input field -->
    <EditText
        android:id="@+id/et_settings_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:text="zinnia@gmail.com"
        android:textColor="@color/financify_lightest_blue"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@color/financify_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_settings_last_name" />

    <!-- email input field label -->
    <TextView
        android:id="@+id/tv_settings_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:text="@string/email_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/et_settings_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- password input field -->
    <EditText
        android:id="@+id/et_settings_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:text="zinnia123"
        android:textColor="@color/financify_lightest_blue"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@color/financify_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_settings_email" />

    <!-- password input field label -->

    <TextView
        android:id="@+id/tv_settings_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/change_password_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_settings_new_password" />

    <EditText
        android:id="@+id/et_settings_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:text="zinnia123"
        android:textColor="@color/financify_lightest_blue"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@color/financify_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_settings_password_label" />

    <!-- progress bar for user account update process -->

    <TextView
        android:id="@+id/tv_settings_password_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/confirm_new_password_label"
        android:textColor="@color/financify_dark_blue"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_settings_confirm_password" />

    <ProgressBar
        android:id="@+id/pb_settings"
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btn_settings_save"
        app:layout_constraintBottom_toBottomOf="@id/btn_settings_save"
        app:layout_constraintStart_toStartOf="@id/btn_settings_save"
        app:layout_constraintEnd_toEndOf="@id/btn_settings_save" />

    <!-- save changes button -->
    <Button
        android:id="@+id/btn_settings_save"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/settings_save"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_password_label2" />
</androidx.constraintlayout.widget.ConstraintLayout>